# chatsystem

server/: CMakeLists.txt
server/ChatServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cc  CServer.cpp  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cc  ChatServiceImpl.cpp  ConfigMgr.h  LogicSystem.cpp  RedisMgr.cc  config.ini  const.h
server/Common/: AsioIOServicePool.h  ConfigMgr.h  MysqlMgr.h  const.h
server/GatewayServer/: AsioIOServicePool.cc  AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cc  ConfigMgr.cpp  ConfigMgr.h  Cserver.cc  Cserver.h  GateServer.cc  GateServer.cpp  HttpConnection.cc  HttpConnection.cpp  HttpConnection.h  LogicSystem.cc  LogicSystem.cpp  LogicSystem.h  MsgNode.h  MysqlDao.cc  MysqlDao.cpp  MysqlDao.h  RedisConPool.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cc  StatusGrpcClient.h  StatusServer.cc  VerifyGrpcClient.cc  VerifyGrpcClient.h  config.ini  const.h  makefile  message.proto  test
server/StatusServer/: CMakeLists.txt  ChatGrpcClient.h  ConfigMgr.cc  ConfigMgr.cpp  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cc  RedisMgr.h  StatusServer.cc  StatusServiceImpl.cc  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h
server/VarifyServer/: config.js  config.json  package-lock.json  package.json  proto.js  redis.js  server.js
server/test/: core.8748  redis  redis.cpp  redis.h  test  test.cc
